--- a/css/style.css
+++ b/css/style.css
@@ -364,15 +364,22 @@ input, select, textarea {
     border: 1px solid #9c9c9c;
     -webkit-appearance: none;
 }
-input:focus, textarea:focus {
-    box-shadow: 0 20px 40px -20px rgba(78, 114, 223, 0.5);
-    border: 1px solid #4E73DF;
-    color: #4E73DF;
+
+input.error, textarea.error {
+    box-shadow: 0 20px 40px -20px rgba(255, 42, 42, 0.797);
+    border: 1px solid #f00000;
+    color: #f00000;
 }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
+}
+
+input:focus, textarea:focus {
+    box-shadow: 0 20px 40px -20px rgba(78, 114, 223, 0.5);
+    border: 1px solid #4E73DF;
+    color: #4E73DF;
 }
 
 textarea.textarea-form {
